# Nomad

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
connector/: index.html  package.json  tsconfig.json  vite.config.ts
connector/src/: main.ts
demo/: README.md  createDemoPassport.ts  e2e.ts  grant.ts
extension/: .env.example  README.md  manifest.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
extension/scripts/: inferenceProxy.ts
extension/src/: agent.ts  background.ts  chatgptExtractor.ts  config.ts  content-inject.ts  content.ts  errors.ts  inference.ts  keystore.ts  messages.ts  nomad-window.d.ts  ownerSigner.ts  passportClient.ts  phantom.ts  polyfill.ts  popup.html  popup.ts  sponsorClient.ts  wallet.ts
extension/test/: inference.test.ts  passport.test.ts  setup.ts
inference/: .env.example  package.json  tsconfig.json
inference/src/: server.ts
mock-amazon/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts
mock-amazon/app/: globals.css  layout.tsx  page.tsx
mock-amazon/components/: AddToCartButton.tsx  AgentVerifyPanel.tsx  BuyNowButton.tsx  CartItemRow.tsx  Footer.tsx  Header.tsx  OrderResult.tsx  Price.tsx  ProductCard.tsx  (+3 more)
programs/agent-passport/: Cargo.toml
programs/agent-passport/src/: constants.rs  contexts.rs  errors.rs  events.rs  lib.rs  state.rs
sponsor/: .env.example  package.json
verifier/: .env.example  package.json  vitest.config.ts
(+29 files in other folders)
