[package]
name = "agent-passport"
version = "0.1.0"
description = "On-chain agent identity & permission passport program"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_passport"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
